Fixed font size change in p tags on mobile version of desktop view

--- a/main.css
+++ b/main.css
@@ -282,7 +282,7 @@ main,
     padding: 0;
   }
   .brief {
-    font-size: 1rem !important;
+    font-size: 0.75rem;
   }
   .work-items {
     display: flex;
